# gmcounter

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  PRINCIPLES.md  README.md  book.toml  main.py  pyproject.toml  raw_usb_test.py  requirements.txt
.github/: README.md
.github/workflows/: auto-release.yml  ci.yml  pr-label-release.yml  release.yml  sphinx-docs.yml  version-bump.yml  version-sync-release.yml
docs/: ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_REVIEW.md  INTEGRATION_NOTES.md  PERFORMANCE_FIX_10KHZ.md  QUICK_REFERENCE.md  TIMING_AND_GPT_TIMER.md  api.rst  architecture.rst  code-structure.rst  conf.py  configuration.rst  data-analysis.rst  faq.rst  index.rst  installation.rst  principles.rst  qt_tooltip_suggestions.md  quickstart.rst  troubleshooting.rst  user-interface.rst
docs/dev_journal/: BATCH_PLOT_OPTIMIZATION.rst  (+3 more)
firmware/: platformio.ini
gmcounter/: __init__.py  __main__.py  arduino.py  config.json  connection.py  data_controller.py  device_manager.py  helper_classes.py  helper_classes_compat.py  main.py  main_window.py  plot.py  stylesheets.py
notebooks/: gm_tube_characterisation.ipynb  gm_tube_resources.py
scripts/: analyse_deadtime.py  debug_data_controller.py  demo_batch_optimization.py  performance_analysis.py  performance_optimization_guide.py  raw_usb_test.py  setup_readthedocs.py  test_autodoc.py  validate_autodoc.py
src/: __init__.py  __main__.py  arduino.py  config.json  connection.py  control.py  data_controller.py  debug_utils.py  device_manager.py  helper_classes.py  main.py  main_window.py  plot.py
src_arduino/: gm_arduino.cpp  serial_com.cpp  serial_com.h
tests/: __init__.py  arduino_test.py  conftest.py  data_controller_test.py  integration_test.py  main_window_test.py  mock_serial_device.py  plotwidget_test.py  run_tests.py  savemanager_extended_test.py  savemanager_test.py  test.py  test_and_run.py  test_batch_plot_update.py  test_complete_plot_reset.py  test_connection_window.py  test_data_separation_verification.py  test_enhanced_protocol.py  test_fast_data_controller.py  test_gui_signals.py  test_index_reset.py  test_optimized_performance.py  test_signals.py  testplan.md
(+127 files in other folders)
