[tool.setuptools.package-data]
"gmcounter" = ["pyqt/*.ui", "pyqt/*.py", "config.json"]

[project]
name = "GMCounter"
version = "1.2.3"
description = "Geiger-Müller Counter GUI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Cedric Kessler", email = "c.kessler@tu-berlin.de"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PySide6>=6.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyqtgraph>=0.13.0",
    "scipy>=1.10.0",
    "pyserial>=3.5",
    "pillow>=9.5.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-napoleon>=0.7",
]

dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/cckssr/gmcounter"
Documentation = "https://gmcounter.readthedocs.io"
Repository = "https://github.com/cckssr/gmcounter"
Issues = "https://github.com/cckssr/gmcounter/issues"

[project.gui-scripts]
gmcounter = "gmcounter.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gmcounter", "gmcounter.*"]
# Exclude mocks from the wheel (§11 — mocks are implementations, not fixtures)
exclude = ["gmcounter.infrastructure.mocks", "gmcounter.infrastructure.mocks.*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"